--- a/automation/poc-oneok.yaml
+++ b/automation/poc-oneok.yaml
@@ -122,12 +122,13 @@
          - add routing prefix-list ipv4 list1 seq 30 deny any
          - add interface swp25 ip address 172.16.0.0/31
          - add bgp network 10.19.241.12/32
-         - add bgp neighbor 172.16.0.1 remote-as 65001
          - add bgp neighbor SPINES peer-group
          - add bgp neighbor SPINES remote-as external
          - add bgp neighbor SPINES capability extended-nexthop
          - add bgp neighbor SPINES description Internal Fabric Network
          - add bgp neighbor swp29-30 interface peer-group SPINES
+         - add bgp evpn neighbor swp29-30 activate
+         - add bgp evpn advertise-all-vni
          - add bgp ipv4 unicast neighbor SPINES prefix-list list1 out
          - add bgp bestpath as-path multipath-relax
          - add vrf tenant1
@@ -161,7 +162,6 @@
          - add routing prefix-list ipv4 list1 seq 30 deny any
          - add interface swp55 ip address 172.16.0.2/31
          - add bgp network 10.19.241.13/32
-         - add bgp neighbor 172.16.0.3 remote-as 65001
          - add bgp neighbor SPINES peer-group
          - add bgp neighbor SPINES remote-as external
          - add bgp neighbor SPINES capability extended-nexthop
@@ -169,6 +169,8 @@
          - add bgp neighbor swp53 interface peer-group SPINES
          - add bgp neighbor swp54 interface peer-group SPINES
          - add bgp ipv4 unicast neighbor SPINES prefix-list list1 out
+         - add bgp evpn neighbor swp53-54 activate
+         - add bgp evpn advertise-all-vni
          - add bgp bestpath as-path multipath-relax
          - add vrf tenant1
          - add interface swp55 vrf tenant1
